mise à jour de l'enregistrement et suppression de fullname et numéro de téléphone
