# backend/docs/swagger.json
@@ -1893,9 +1893,7 @@
             "type": "object",
             "required": [
                 "email",
-                "full_name",
-                "password_hash",
-                "phone"
+                "password_hash"
             ],
             "properties": {
                 "createdAt": {
@@ -1908,10 +1906,6 @@
                     "description": "Validation d'email",
                     "type": "string"
                 },
-                "full_name": {
-                    "description": "Nom complet requis",
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -1921,10 +1915,6 @@
                 },
                 "password_hash": {
                     "description": "Hash du mot de passe",
-                    "type": "string"
-                },
-                "phone": {
-                    "description": "Téléphone requis",
                     "type": "string"
                 },
                 "updatedAt": {
@@ -2059,27 +2049,17 @@
             "type": "object",
             "required": [
                 "email",
-                "full_name",
-                "password",
-                "phone"
+                "password"
             ],
             "properties": {
                 "email": {
                     "type": "string",
                     "example": "user@example.com"
                 },
-                "full_name": {
-                    "type": "string",
-                    "example": "patrick"
-                },
                 "password": {
                     "type": "string",
                     "minLength": 8,
                     "example": "password123"
-                },
-                "phone": {
-                    "type": "string",
-                    "example": "+32460232425"
                 }
             }
         },
